# nonebot-plugin-todo-nlp

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
nonebot_plugin_todo_nlp/: __init__.py  config.py  nlp_util.py  todo.py  todo_manage.py
nonebot_plugin_todo_nlp/templates/: template.html
nonebot_plugin_todo_nlp/templates/css/: style.css
