[tool.poetry]
name = "nonebot-plugin-todo-nlp"
version = "0.1.8b"
description = "一款自动识别提醒内容，可生成todo图片并定时推送的nonebot2插件"
authors = ["CofinCup <864341840@qq.com>"]
license = "MIT license"

[tool.poetry.dependencies]
python = "^3.8"
jionlp = "^1.4.17"
pandas = "^1.4.3"
nonebot2 = "^2.0.0-beta.5"
nonebot-plugin-htmlrender = "^0.1.1"
pathlib = "^1.0.1"
nonebot-plugin-apscheduler = "0.2.0"
nonebot-adapter-onebot = "^2.1.3"
jieba = "^0.42.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
